--- a/memory/css/memory.css
+++ b/memory/css/memory.css
@@ -1,6 +1,3 @@
-.error_statement {
-	display: none;
-}
 
 .plus.myButton {
 	position: absolute;
@@ -40,4 +37,10 @@ body {
 	color: #888888;
 }
 
+.error_statement {
+	color: red;
+	border-color: #FF00B2;
+	background-color: #ffdddd;
+	padding: 20px;
+}
 
