--- a/style/Whole.css
+++ b/style/Whole.css
@@ -267,7 +267,7 @@ div.horizontal-bar-chart {
 div div.dc-data-count {
   float: left;
   padding: 0 0 0 0;
-  margin-top: 56px;
+  margin-top: 58px;
   margin-right: 15px; }
   div div.dc-data-count .filter-count, div div.dc-data-count .total-count {
     color: #3182bd;
@@ -857,4 +857,4 @@ body .bg-color-255-255-255-0 {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
 
-/*# sourceMappingURL=dc.css.map */
+/*# sourceMappingURL=Whole.css.map */
