--- a/style/Whole.css
+++ b/style/Whole.css
@@ -1,4 +1,4 @@
-.dc-chart path.dc-symbol, .dc-legend g.dc-legend-item.fadeout {
+.dc-legend g.dc-legend-item.fadeout, .dc-chart path.dc-symbol {
   fill-opacity: 0.5;
   stroke-opacity: 0.5; }
 
@@ -61,217 +61,6 @@ div.horizontal-bar-chart {
 
 .scatter-chart.dc-chart .x-label {
   bottom: 18px; }
-
-.dc-chart {
-  position: relative; }
-  .dc-chart.horizontal-bar-chart .popup_menu {
-    top: -3px; }
-  .dc-chart .popup_menu {
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    cursor: pointer;
-    width: 12px; }
-    .dc-chart .popup_menu .bar {
-      width: 22px;
-      height: 3px;
-      background-color: #444444;
-      margin: 4px 0;
-      border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px; }
-  .dc-chart .top_left {
-    position: absolute;
-    top: 30px;
-    left: 0; }
-    .dc-chart .top_left strong {
-      font-size: 15px; }
-  .dc-chart .x-label {
-    position: absolute;
-    left: 0;
-    bottom: 26px;
-    width: 400px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 14px; }
-  .dc-chart .x-label:first-letter {
-    text-transform: capitalize; }
-  .dc-chart .y-label {
-    position: absolute;
-    left: -190px;
-    bottom: 205px;
-    text-align: center;
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    font-size: 14px;
-    font-weight: bold; }
-  .dc-chart .y-label:first-letter {
-    text-transform: capitalize; }
-  .dc-chart rect.bar {
-    stroke: none;
-    cursor: pointer; }
-    .dc-chart rect.bar:hover {
-      fill-opacity: .5; }
-  .dc-chart rect.deselected {
-    stroke: none;
-    fill: #ccc; }
-  .dc-chart .pie-slice {
-    fill: #fff;
-    font-size: 12px;
-    cursor: pointer; }
-    .dc-chart .pie-slice.external {
-      fill: #000; }
-    .dc-chart .pie-slice :hover, .dc-chart .pie-slice.highlight {
-      fill-opacity: .8; }
-  .dc-chart .pie-path {
-    fill: none;
-    stroke-width: 2px;
-    stroke: #000;
-    opacity: 0.4; }
-  .dc-chart .selected path, .dc-chart .selected circle {
-    stroke-width: 3;
-    stroke: #ccc;
-    fill-opacity: 1; }
-  .dc-chart .deselected path, .dc-chart .deselected circle {
-    stroke: none;
-    fill-opacity: .5;
-    fill: #ccc; }
-  .dc-chart .axis path, .dc-chart .axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges; }
-  .dc-chart .axis text {
-    font: 10px sans-serif; }
-  .dc-chart .grid-line, .dc-chart .axis .grid-line, .dc-chart .grid-line line, .dc-chart .axis .grid-line line {
-    fill: none;
-    stroke: #ccc;
-    opacity: .5;
-    shape-rendering: crispEdges; }
-  .dc-chart .brush rect.selection {
-    fill: #4682b4;
-    fill-opacity: .125; }
-  .dc-chart .brush .custom-brush-handle {
-    fill: #eee;
-    stroke: #666;
-    cursor: ew-resize; }
-  .dc-chart path.line {
-    fill: none;
-    stroke-width: 1.5px; }
-  .dc-chart path.area {
-    fill-opacity: .3;
-    stroke: none; }
-  .dc-chart path.highlight {
-    stroke-width: 3;
-    fill-opacity: 1;
-    stroke-opacity: 1; }
-  .dc-chart g.state {
-    cursor: pointer; }
-    .dc-chart g.state :hover {
-      fill-opacity: .8; }
-    .dc-chart g.state path {
-      stroke: #fff; }
-  .dc-chart g.deselected path {
-    fill: #808080; }
-  .dc-chart g.deselected text {
-    display: none; }
-  .dc-chart g.row rect {
-    fill-opacity: 0.8;
-    cursor: pointer; }
-    .dc-chart g.row rect:hover {
-      fill-opacity: 0.6; }
-  .dc-chart g.row text {
-    fill: #fff;
-    font-size: 12px;
-    cursor: pointer; }
-  .dc-chart g.dc-tooltip path {
-    fill: none;
-    stroke: #808080;
-    stroke-opacity: .8; }
-  .dc-chart g.county path {
-    stroke: #fff;
-    fill: none; }
-  .dc-chart g.debug rect {
-    fill: #00f;
-    fill-opacity: .2; }
-  .dc-chart g.axis text {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    pointer-events: none; }
-  .dc-chart .node {
-    font-size: 0.7em;
-    cursor: pointer; }
-    .dc-chart .node :hover {
-      fill-opacity: .8; }
-  .dc-chart .bubble {
-    stroke: none;
-    fill-opacity: 0.6; }
-  .dc-chart .highlight {
-    fill-opacity: 1;
-    stroke-opacity: 1; }
-  .dc-chart .fadeout {
-    fill-opacity: 0.2;
-    stroke-opacity: 0.2; }
-  .dc-chart .box text {
-    font: 10px sans-serif;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    pointer-events: none; }
-  .dc-chart .box line {
-    fill: #fff; }
-  .dc-chart .box rect, .dc-chart .box line, .dc-chart .box circle {
-    stroke: #000;
-    stroke-width: 1.5px; }
-  .dc-chart .box .center {
-    stroke-dasharray: 3, 3; }
-  .dc-chart .box .data {
-    stroke: none;
-    stroke-width: 0px; }
-  .dc-chart .box .outlier {
-    fill: none;
-    stroke: #ccc; }
-  .dc-chart .box .outlierBold {
-    fill: red;
-    stroke: none; }
-  .dc-chart .box.deselected {
-    opacity: 0.5; }
-    .dc-chart .box.deselected .box {
-      fill: #ccc; }
-  .dc-chart .symbol {
-    stroke: none; }
-  .dc-chart .heatmap .box-group.deselected rect {
-    stroke: none;
-    fill-opacity: 0.5;
-    fill: #ccc; }
-  .dc-chart .heatmap g.axis text {
-    pointer-events: all;
-    cursor: pointer; }
-  .dc-chart .empty-chart .pie-slice {
-    cursor: default; }
-    .dc-chart .empty-chart .pie-slice path {
-      fill: #fee;
-      cursor: default; }
-  .dc-chart circle.dot {
-    stroke: none; }
-
-div div.dc-data-count {
-  float: left;
-  padding: 0 0 0 0;
-  margin-top: 58px;
-  margin-right: 15px; }
-  div div.dc-data-count .filter-count, div div.dc-data-count .total-count {
-    color: #3182bd;
-    font-weight: bold; }
 
 .dc-legend {
   font-size: 11px; }
@@ -856,5 +645,215 @@ body .bg-color-255-255-255-0 {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+.dc-chart {
+  position: relative; }
+  .dc-chart.horizontal-bar-chart .popup_menu {
+    top: -3px; }
+  .dc-chart .popup_menu {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    cursor: pointer;
+    width: 12px; }
+    .dc-chart .popup_menu .bar {
+      width: 22px;
+      height: 3px;
+      background-color: #444444;
+      margin: 4px 0;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px; }
+  .dc-chart .top_left {
+    position: absolute;
+    top: 30px;
+    left: 0; }
+    .dc-chart .top_left strong {
+      font-size: 15px; }
+  .dc-chart .x-label {
+    position: absolute;
+    left: 0;
+    bottom: 26px;
+    width: 400px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px; }
+  .dc-chart .x-label:first-letter {
+    text-transform: capitalize; }
+  .dc-chart .y-label {
+    position: absolute;
+    left: -190px;
+    bottom: 205px;
+    text-align: center;
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    font-size: 14px;
+    font-weight: bold; }
+  .dc-chart .y-label:first-letter {
+    text-transform: capitalize; }
+  .dc-chart rect.bar {
+    stroke: none;
+    cursor: pointer; }
+    .dc-chart rect.bar:hover {
+      fill-opacity: .5; }
+  .dc-chart rect.deselected {
+    stroke: none;
+    fill: #ccc; }
+  .dc-chart .pie-slice {
+    fill: #fff;
+    font-size: 12px;
+    cursor: pointer; }
+    .dc-chart .pie-slice.external {
+      fill: #000; }
+    .dc-chart .pie-slice :hover, .dc-chart .pie-slice.highlight {
+      fill-opacity: .8; }
+  .dc-chart .pie-path {
+    fill: none;
+    stroke-width: 2px;
+    stroke: #000;
+    opacity: 0.4; }
+  .dc-chart .selected path, .dc-chart .selected circle {
+    stroke-width: 3;
+    stroke: #ccc;
+    fill-opacity: 1; }
+  .dc-chart .deselected path, .dc-chart .deselected circle {
+    stroke: none;
+    fill-opacity: .5;
+    fill: #ccc; }
+  .dc-chart .axis path, .dc-chart .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges; }
+  .dc-chart .axis text {
+    font: 10px sans-serif; }
+  .dc-chart .grid-line, .dc-chart .axis .grid-line, .dc-chart .grid-line line, .dc-chart .axis .grid-line line {
+    fill: none;
+    stroke: #ccc;
+    opacity: .5;
+    shape-rendering: crispEdges; }
+  .dc-chart .brush rect.selection {
+    fill: #4682b4;
+    fill-opacity: .125; }
+  .dc-chart .brush .custom-brush-handle {
+    fill: #eee;
+    stroke: #666;
+    cursor: ew-resize; }
+  .dc-chart path.line {
+    fill: none;
+    stroke-width: 1.5px; }
+  .dc-chart path.area {
+    fill-opacity: .3;
+    stroke: none; }
+  .dc-chart path.highlight {
+    stroke-width: 3;
+    fill-opacity: 1;
+    stroke-opacity: 1; }
+  .dc-chart g.state {
+    cursor: pointer; }
+    .dc-chart g.state :hover {
+      fill-opacity: .8; }
+    .dc-chart g.state path {
+      stroke: #fff; }
+  .dc-chart g.deselected path {
+    fill: #808080; }
+  .dc-chart g.deselected text {
+    display: none; }
+  .dc-chart g.row rect {
+    fill-opacity: 0.8;
+    cursor: pointer; }
+    .dc-chart g.row rect:hover {
+      fill-opacity: 0.6; }
+  .dc-chart g.row text {
+    fill: #fff;
+    font-size: 12px;
+    cursor: pointer; }
+  .dc-chart g.dc-tooltip path {
+    fill: none;
+    stroke: #808080;
+    stroke-opacity: .8; }
+  .dc-chart g.county path {
+    stroke: #fff;
+    fill: none; }
+  .dc-chart g.debug rect {
+    fill: #00f;
+    fill-opacity: .2; }
+  .dc-chart g.axis text {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none; }
+  .dc-chart .node {
+    font-size: 0.7em;
+    cursor: pointer; }
+    .dc-chart .node :hover {
+      fill-opacity: .8; }
+  .dc-chart .bubble {
+    stroke: none;
+    fill-opacity: 0.6; }
+  .dc-chart .highlight {
+    fill-opacity: 1;
+    stroke-opacity: 1; }
+  .dc-chart .fadeout {
+    fill-opacity: 0.2;
+    stroke-opacity: 0.2; }
+  .dc-chart .box text {
+    font: 10px sans-serif;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none; }
+  .dc-chart .box line {
+    fill: #fff; }
+  .dc-chart .box rect, .dc-chart .box line, .dc-chart .box circle {
+    stroke: #000;
+    stroke-width: 1.5px; }
+  .dc-chart .box .center {
+    stroke-dasharray: 3, 3; }
+  .dc-chart .box .data {
+    stroke: none;
+    stroke-width: 0px; }
+  .dc-chart .box .outlier {
+    fill: none;
+    stroke: #ccc; }
+  .dc-chart .box .outlierBold {
+    fill: red;
+    stroke: none; }
+  .dc-chart .box.deselected {
+    opacity: 0.5; }
+    .dc-chart .box.deselected .box {
+      fill: #ccc; }
+  .dc-chart .symbol {
+    stroke: none; }
+  .dc-chart .heatmap .box-group.deselected rect {
+    stroke: none;
+    fill-opacity: 0.5;
+    fill: #ccc; }
+  .dc-chart .heatmap g.axis text {
+    pointer-events: all;
+    cursor: pointer; }
+  .dc-chart .empty-chart .pie-slice {
+    cursor: default; }
+    .dc-chart .empty-chart .pie-slice path {
+      fill: #fee;
+      cursor: default; }
+  .dc-chart circle.dot {
+    stroke: none; }
+
+div div.dc-data-count {
+  float: left;
+  padding: 0 0 0 0;
+  margin-top: 58px;
+  margin-right: 15px; }
+  div div.dc-data-count .filter-count, div div.dc-data-count .total-count {
+    color: #3182bd;
+    font-weight: bold; }
 
 /*# sourceMappingURL=Whole.css.map */
