--- a/style/Whole.css
+++ b/style/Whole.css
@@ -222,81 +222,6 @@ body .dc-chart g.row text {
     top: 7px;
     color: #555555; }
 
-.container {
-  /* make room for rotated labels. */
-  /* Need to be able to see long labels without them overlapping each other. */ }
-  .container div.launch_button {
-    padding: 7px;
-    width: 20px; }
-    .container div.launch_button div {
-      background-image: url(../img/refresh.png);
-      background-size: 100% 100%;
-      width: 17px;
-      height: 17px; }
-  .container .reset_all {
-    color: #0c7cd5;
-    text-decoration: underline;
-    cursor: pointer; }
-  .container .contain_show_more {
-    text-align: center;
-    padding: 0 0 15px 0; }
-  .container svg[height="370"] {
-    height: 450px; }
-  .container .x.axis text {
-    text-anchor: end !important;
-    transform: rotate(-45deg) translate(-7px, -5px) scaleX(1.23) scaleY(1.23); }
-  .container .y.axis text {
-    transform: scaleX(1.2) scaleY(1.2); }
-  .container .help_body, .container .user_pref_body {
-    background-color: #f2f2f2;
-    border: 1px solid #cccccc;
-    padding: 22px 0 22px 22px;
-    font-size: 13px;
-    margin: 4px 0 4px -20px; }
-  .container .user_pref_body .prow {
-    display: inline-block;
-    width: 270px;
-    margin: 6px 0 6px 0; }
-    .container .user_pref_body .prow .title {
-      position: relative;
-      top: 4px;
-      left: 4px; }
-    .container .user_pref_body .prow input {
-      zoom: 1.5; }
-  .container a {
-    cursor: pointer; }
-  .container div.multi_jupyter {
-    right: auto;
-    left: 1255px; }
-  .container .icon {
-    padding: 8px 7px 8px 8px;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    z-index: 1000; }
-    .container .icon .inner {
-      width: 20px;
-      height: 20px;
-      -webkit-filter: invert(100%);
-      /* Safari/Chrome */
-      filter: invert(100%); }
-  .container .help_icon div {
-    background-image: url(../img/info.png);
-    background-size: 100% 100%; }
-  .container .plus_icon {
-    right: 95px; }
-    .container .plus_icon div {
-      background-image: url(../img/plus.png);
-      background-size: 100% 100%; }
-  .container .user_pref_icon {
-    right: 50px; }
-    .container .user_pref_icon div {
-      background-image: url(../img/check.png);
-      background-size: 100% 100%; }
-
 table.only_multi_row_selector tr:nth-child(2) td {
   padding: 0 0 0 0; }
 table.only_multi_row_selector tr td:first-child {
@@ -368,27 +293,27 @@ table.only_multi_row_selector tr td:nth-child(2) select {
   font-size: 11px;
   color: #999999; }
 
-.dc-data-table .walltime {
+table.dc-data-table .walltime {
   position: static; }
-  .dc-data-table .walltime div {
+  table.dc-data-table .walltime div {
     background-image: url(../img/walltime.png);
     background-size: 100% 100%; }
-.dc-data-table .memory {
+table.dc-data-table .memory {
   position: static; }
-  .dc-data-table .memory div {
+  table.dc-data-table .memory div {
     background-image: url(../img/memory.png);
     background-size: 100% 100%; }
-.dc-data-table .jupyter.icon {
+table.dc-data-table .jupyter.icon {
   position: static;
   padding: 10px 7px 10px 8px; }
-  .dc-data-table .jupyter.icon div {
+  table.dc-data-table .jupyter.icon div {
     height: 16px;
     /* jupyter.png, planet.png, notes.png */
     background-image: url(../img/planet.gif);
     background-size: 100% 100%; }
-.dc-data-table th {
+table.dc-data-table th {
   position: relative; }
-.dc-data-table .up_arrow {
+table.dc-data-table .up_arrow {
   position: absolute;
   top: 10px;
   left: -9px;
@@ -398,7 +323,7 @@ table.only_multi_row_selector tr td:nth-child(2) select {
   border-right: 7px solid transparent;
   border-bottom: 7px solid #555555;
   cursor: pointer; }
-.dc-data-table .down_arrow {
+table.dc-data-table .down_arrow {
   position: absolute;
   top: 20px;
   left: -9px;
@@ -408,10 +333,10 @@ table.only_multi_row_selector tr td:nth-child(2) select {
   border-right: 7px solid transparent;
   border-top: 7px solid #555555;
   cursor: pointer; }
-.dc-data-table .dc-table-head {
+table.dc-data-table .dc-table-head {
   position: relative;
   left: 14px; }
-.dc-data-table .dc-table-head:last-child {
+table.dc-data-table .dc-table-head:last-child {
   display: none; }
 
 .bottom_table {
@@ -855,5 +780,80 @@ div div.dc-data-count {
   div div.dc-data-count .filter-count, div div.dc-data-count .total-count {
     color: #3182bd;
     font-weight: bold; }
+
+.container {
+  /* make room for rotated labels. */
+  /* Need to be able to see long labels without them overlapping each other. */ }
+  .container div.launch_button {
+    padding: 7px;
+    width: 20px; }
+    .container div.launch_button div {
+      background-image: url(../img/refresh.png);
+      background-size: 100% 100%;
+      width: 17px;
+      height: 17px; }
+  .container .reset_all {
+    color: #0c7cd5;
+    text-decoration: underline;
+    cursor: pointer; }
+  .container .contain_show_more {
+    text-align: center;
+    padding: 0 0 15px 0; }
+  .container svg[height="370"] {
+    height: 450px; }
+  .container .x.axis text {
+    text-anchor: end !important;
+    transform: rotate(-45deg) translate(-7px, -5px) scaleX(1.23) scaleY(1.23); }
+  .container .y.axis text {
+    transform: scaleX(1.2) scaleY(1.2); }
+  .container .help_body, .container .user_pref_body {
+    background-color: #f2f2f2;
+    border: 1px solid #cccccc;
+    padding: 22px 0 22px 22px;
+    font-size: 13px;
+    margin: 4px 0 4px -20px; }
+  .container .user_pref_body .prow {
+    display: inline-block;
+    width: 270px;
+    margin: 6px 0 6px 0; }
+    .container .user_pref_body .prow .title {
+      position: relative;
+      top: 4px;
+      left: 4px; }
+    .container .user_pref_body .prow input {
+      zoom: 1.5; }
+  .container a {
+    cursor: pointer; }
+  .container div.multi_jupyter {
+    right: auto;
+    left: 1255px; }
+  .container .icon {
+    padding: 8px 7px 8px 8px;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 1000; }
+    .container .icon .inner {
+      width: 20px;
+      height: 20px;
+      -webkit-filter: invert(100%);
+      /* Safari/Chrome */
+      filter: invert(100%); }
+  .container .help_icon div {
+    background-image: url(../img/info.png);
+    background-size: 100% 100%; }
+  .container .plus_icon {
+    right: 95px; }
+    .container .plus_icon div {
+      background-image: url(../img/plus.png);
+      background-size: 100% 100%; }
+  .container .user_pref_icon {
+    right: 50px; }
+    .container .user_pref_icon div {
+      background-image: url(../img/check.png);
+      background-size: 100% 100%; }
 
 /*# sourceMappingURL=Whole.css.map */
